style/body/header.scss
@import "../common/colors.scss";
@import "../common/fonts.scss";

#header-image {
    grid-column: sidebar-start / display-end;
    background: linear-gradient(to bottom right, rgba(242, 255, 0, 0.077), rgba(255, 0, 0, 0.071)), url(../../assets/images/saugatowersBW.png);
    background-size: 100% auto;
    background-position: 0 0;
    background-repeat: no-repeat;
    overflow: visible;
    position: sticky;

    @media only screen and (max-width: $bp-large) {
        background-position: 0 20%;
    }
}

header {
    grid-column: sidebar-start / display-end;
    font-size: 1.8rem;
    font-family: $fira;
    background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/stylus.jpg') top left/auto 100% no-repeat;
    display: flex;
    align-items: center;
    padding: 0 5rem 0 18rem;
    justify-content: space-between;
    box-shadow: $dropshadow1;

    @media only screen and (max-width: $bp-mid) {
        flex-direction: column;
        padding: 0%;
        justify-content: center;
        background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
    }

    @media only screen and (max-width: $bp-small) {
        font-size: 1.2rem;
    }

    h1 {
        font-weight: 500;
        letter-spacing: -1px;
        font-family: $manrope;

        @media only screen and (max-width: $bp-large) {
            font-size: 3.5rem;
            text-align: center;
        }

        @media only screen and (max-width: $bp-small) {
            font-size: 2.5rem;
        }
    }

    #social {
        display: grid;
        grid-template-columns: repeat(6, min-content);

        a {
            display: flex;
            flex-direction: column;
            justify-content: center;
            text-decoration: none;
            text-transform: uppercase;
            padding: 7px;
            height: 100%;
            color: black;
            transition: background-color 0.1s;
        }

        a:before {
            padding: 5px 7px;
        }

        a:hover {
            background-color: $gray2;
        }

        a.fa-instagram {
            color: $color-instagram;
        }

        a.fa-youtube {
            color: $color-youtube;
        }

        a.fa-apple {
            color: black;
        }

        a.fa-spotify {
            color: $color-spotify;
        }

        a.fa-soundcloud {
            color: orange;
        }
    }
}

